<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android45_app_doc_bao_gioi_thieu.OnboardingFragment1">
    <ImageView
        android:layout_marginTop="50dp"
        android:src="@drawable/o3"
        android:layout_width="300dp"
        android:layout_height="300dp"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/gt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gt31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:background="@drawable/custom_bo_goc"
        android:id="@+id/btGetStart"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/gt33"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>