<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context="com.example.android45_app_doc_bao_gioi_thieu.OnboardingFragment1">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUsr"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/o2"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/gt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>