<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:gravity="center|top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/custom_dang_nhap"
            android:id="@+id/line1"
            android:gravity="center"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/imgMuiTenBack"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:text="@string/tv_dang_nhap"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line2"
            android:background="@drawable/custom_login"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/line1"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/facebook"
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="3.9"
                android:textSize="18sp"
                android:gravity="center|left"
                android:text="@string/tv_dang_nhap_fb"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line3"
            android:background="@drawable/custom_login"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/line2"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/google"
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="3.9"
                android:textSize="18sp"
                android:gravity="center|left"
                android:text="@string/tv_dang_nhap_google"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_dang_nhap_email"
            android:textColor="@color/xam_dam"
            android:textSize="18sp" />
        <LinearLayout
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_dang_nhap"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:gravity="center"
                android:text="@string/tv_chua_co_tk"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvTaoTaiKhoan"
                android:textColor="@color/xam_dam"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/tv_tao_tk"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </RelativeLayout>

</layout>