<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_margin="9dp"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgMuiTenUser"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
        <LinearLayout
            android:gravity="center|left"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imgUser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/anh"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <TextView
                android:layout_marginLeft="9dp"
                android:layout_gravity="center"
                android:id="@+id/tvDangNhap"
                android:textStyle="bold"
                android:textSize="23dp"
                android:text="Đăng nhập"
                android:gravity="center|left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_marginRight="5dp"
                    android:id="@+id/tvDaDanhDau"
                    android:paddingLeft="5dp"
                    android:background="@drawable/custtom_user"
                    android:gravity="center|left"
                    android:text="Đã đánh dấu"
                    android:drawableLeft="@drawable/ic_baseline_playlist_add_check_24"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="5dp"
                    android:background="@drawable/custtom_user"
                    android:gravity="center|left"
                    android:text="Đang theo dõi"
                    android:drawableLeft="@drawable/ic_baseline_check_circle_outline_24"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_marginRight="5dp"
                    android:paddingLeft="5dp"
                    android:background="@drawable/custtom_user"
                    android:gravity="center|left"
                    android:text="Đọc Offline"
                    android:drawableLeft="@drawable/ic_baseline_arrow_circle_down_24"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/tvDaDoc"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/custtom_user"
                    android:gravity="center|left"
                    android:text="Đọc gần đây"
                    android:drawableLeft="@drawable/ic_baseline_access_time_24"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:textSize="17dp"
            android:textColor="#077380"
            android:gravity="center|left"
            android:text="TIỆN ÍCH"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_calendar_month_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_lich"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_cloud_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_thoitiet"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_blur_circular_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_ket_qua_xo_so"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_attach_money_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_gia_vang"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_sports_soccer_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_live"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_tien_ich_khach"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:textSize="17dp"
            android:textColor="#077380"
            android:gravity="center|left"
            android:text="@string/tv_cai_dat"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_format_size_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_co_chu"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_color_lens_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_theme"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:checked="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_speaker_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_giong_doc"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="right"
                android:textSize="19dp"
                android:text="@string/tv_giong_doc1"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_tindp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="right"
                android:textSize="19dp"
                android:text="@string/tv_tindp1"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_baseline_settings_24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="10dp"
                android:textSize="19dp"
                android:text="@string/tv_nang_cao"
                android:layout_weight="4.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tvDangXuat"
            android:textSize="17dp"
            android:textColor="#077380"
            android:gravity="center|left"
            android:text="@string/tv_dang_xua"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>
</layout>